# Med

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  style.css
recipe/: __init__.py
recipe/med/: __init__.py  serve_ray.py  trajectory_saver.py  trajectory_visualizer.py  vision_tool.py  vision_tool_fn.py  vision_tool_utils.py
recipe/med/analysis_plot/: __init__.py  analyze_crop_quality.py  analyze_data_sources.py  average_steps.py  calculate_and_plot_area.py  compute_bootstrap_ci.py  create_comparison_table.py  create_csv.py  extract_sample_indices.py  generate_latex_tables.py  match_samples_with_images.py  plot_four_terms.py  plot_paper_figures.py  plot_paper_figures_per_benchmark.py  plot_paper_per_benchmark.py  plot_partition_comparison.py  plot_term_factor_fixed_partition.py  plot_term_factors.py  plot_term_factors_per_benchmark.py  plot_terms.py  plot_terms_absolute.py  plot_terms_absolute_per_benchmark.py  requirements_plotter.txt  run.sh  run_paper.sh  upload_hf_dataset.py  utils.py
recipe/med/config/: eval.yaml  vision_tool_use_rl.yaml
recipe/med/eval/: eval_dataset.py  main_eval.py  ray_evaluator.py
recipe/med/scripts/: eval.sh  get_head_node_ip.sh  reward_server.sh  run.sh  run_eval.sh  run_qwenvl_multiturn_grpo.sh  serve_vision_tool.sh  train.sh
reward_server/: reward_serving_fastapi.py
reward_server/verifier/: __init__.py  utils_rule.py
scripts/: analysis_data_source.py  dedup_train_eval_phash.py  filter_training_data.py  migrate_baseline_data.py  migrate_baseline_data.sh  migrate_eval_data.py  migrate_eval_data.sh  run_create_csv.sh  run_migrate.sh  run_plot_paper_figures.sh
tests/: test_migrate_eval_data.py
verl/: __init__.py  protocol.py
verl/experimental/agent_loop/: agent_loop.py  prometheus_utils.py  single_turn_agent_loop.py  tool_agent_loop.py  tool_parser.py  utils.py
verl/experimental/dynamic_dataset/: dynamicgen_dataset.py
verl/experimental/reward/: reward_manager.py  reward_model.py
verl/interactions/: base.py  gsm8k_interaction.py
verl/interactions/utils/: interaction_registry.py
verl/model_merger/: base_model_merger.py  fsdp_model_merger.py  megatron_model_merger.py
verl/models/: registry.py
verl/models/mcore/: config_converter.py  loader.py  mbridge.py  model_forward.py  model_forward_1f1b_overlap.py  model_forward_fused.py  model_initializer.py  patch_v012.py  readme.md  registry.py  saver.py  util.py
verl/models/transformers/: apertus.py  dense_common.py  glm46v.py  glm4v.py  kimi_vl.py  llama.py  monkey_patch.py  npu_patch.py  qwen2.py  qwen2_vl.py  qwen3_vl.py
verl/single_controller/base/: decorator.py  worker.py  worker_group.py
verl/single_controller/ray/: base.py
verl/tools/: base_tool.py  geo3k_tool.py  gsm8k_tool.py  image_zoom_in_tool.py  mcp_base_tool.py  sandbox_fusion_tools.py  schemas.py  search_tool.py
verl/tools/utils/: search_r1_like_utils.py  tool_registry.py
verl/trainer/: constants_ppo.py  fsdp_sft_trainer.py  main_eval.py  main_generation.py  main_generation_server.py  main_ppo.py  sft_trainer.py
verl/trainer/config/: sft_trainer_engine.yaml
verl/trainer/ppo/: core_algos.py  metric_utils.py  ray_trainer.py  reward.py  rollout_corr_helper.py
verl/utils/: activation_offload.py  attention_utils.py  config.py  device.py  flops_counter.py  fs.py  fsdp_utils.py  groupwise.py  megatron_utils.py  memory_buffer.py  memory_utils.py  model.py  npu_utils.py  py_functional.py  rollout_skip.py  rollout_trace.py  seqlen_balancing.py  tensordict_utils.py  tokenizer.py  torch_functional.py  tracking.py  transferqueue_utils.py  transformers_compat.py  ulysses.py
verl/utils/checkpoint/: checkpoint_handler.py  checkpoint_manager.py  fsdp_checkpoint_manager.py  megatron_checkpoint_manager.py
verl/utils/dataset/: multiturn_sft_dataset.py  prompt_pool.py  rl_dataset.py  rm_dataset.py  sft_dataset.py  vision_utils.py
verl/utils/debug/: metrics.py
verl/utils/experimental/: torch_functional.py
verl/workers/: fsdp_workers.py  megatron_workers.py
(+111 files in other folders)
