[project]
name = "med"
version = "0.1.0"
description = "MED (Measure-Explain-Diagnose) Framework for Vision Tool-Use RL Analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MED Contributors"}
]
keywords = ["reinforcement learning", "vision", "tool use", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Scientific Computing (required for analysis_plot)
    "numpy==2.2.6",
    "scipy==1.16.3",
    "pandas==2.3.3",

    # Visualization and Plotting (required for analysis_plot)
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
# Training environment dependencies (install with: uv pip install -e ".[train]")
train = [
    # Deep Learning Core
    "torch==2.9.1",
    "torchvision==0.24.1",
    "triton==3.5.1",
    "ninja==1.13.0",
    "cmake==4.0.3",

    # Transformers and Multimodal
    "transformers==5.0.0rc0",
    "tokenizers==0.22.1",
    "accelerate==1.12.0",
    "peft==0.18.0",
    "timm==1.0.16",
    "qwen-vl-utils==0.0.14",
    "huggingface-hub==1.2.1",

    # High-Performance Inference (including flash-attn)
    "flash-attn==2.8.3",
    "sglang==0.5.6.post1",
    "outlines==0.1.11",
    "liger-kernel==0.6.4",
    "torchao==0.9.0",

    # RL Framework
    "ray==2.52.1",
    "gymnasium==1.1.1",
    "tensordict==0.10.0",

    # Datasets
    "datasets==4.4.1",

    # Vision Processing
    "pillow==11.0.0",
    "opencv-python==4.12.0.88",
    "av==16.0.1",
    "decord2==2.0.0",
    "einops==0.8.1",
    "cupy-cuda12x==13.6.0",

    # Configuration Management
    "hydra-core==1.4.0.dev1",
    "omegaconf>=2.4.0.dev2",

    # Monitoring and Logging
    "wandb==0.23.0",
    "tensorboardX==2.6.4",
    "nvitop==1.6.0",

    # API Clients
    "openai==2.6.1",
    "anthropic==0.75.0",

    # Web Services
    "fastapi==0.123.2",
    "uvicorn==0.38.0",

    # Cloud Storage
    "boto3==1.42.0",
    "oss2==2.19.1",
    "modelscope==1.33.0",

    # Serialization and Tokenization
    "safetensors==0.7.0",
    "tiktoken==0.12.0",
    "sentencepiece==0.2.1",

    # Math and LaTeX (for MathVision benchmarks)
    "latex2sympy2-extended==1.10.2",
    "math-verify==0.8.0",
    "TexSoup==0.3.1",
]

# Development tools
dev = [
    "ruff==0.14.7",
    "pytest==9.0.1",
    "ipdb==0.13.13",
    "ipython==9.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/GAIR-NLP/Med"
Repository = "https://github.com/GAIR-NLP/Med"
Issues = "https://github.com/GAIR-NLP/Med/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
# Configure build dependencies for packages that need to build against torch
[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.9.1", "ninja==1.13.0", "packaging"]
